# alcatel-modem-api

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new_modem_support.md
.github/workflows/: docs.yml  main.yml
alcatel_modem_api/: __init__.py  api.py  auth.py  cli.py  client.py  config.py  constants.py  exceptions.py  models.py  sms.py
alcatel_modem_api/auth/: __init__.py  strategies.py
alcatel_modem_api/endpoints/: __init__.py  device.py  network.py  sms.py  system.py  wlan.py
alcatel_modem_api/utils/: __init__.py  diagnostics.py  diagnostics_models.py  display.py  encryption.py  keyring_storage.py  logging.py
docs/: index.md
examples/: README.md  connection.py  munin_exporter.py  poll.py  prometheus_exporter.py  signal.py  sms.py  ussd.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_constants.py  test_fuzz.py  test_models.py  test_sms.py  test_sync_async_parity.py
