[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alcatel-modem-api"
version = "1.0.0"
description = "Generic Python library and CLI tool for Alcatel LTE modems"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Alcatel Modem API Contributors"}
]
keywords = ["alcatel", "modem", "lte", "4g", "5g", "router", "api", "sms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Communications :: Telephony",
]

dependencies = [
    "requests>=2.28.0",
    "cryptography>=3.4.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests-mock>=1.10.0",
]

[project.scripts]
alcatel-modem-cli = "alcatel_modem_api.cli:cli"

[tool.setuptools]
packages = ["alcatel_modem_api"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.ruff]
line-length = 160
indent-width = 2

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["alcatel_modem_api"]

