[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alcatel-modem-api"
dynamic = ["version"]
description = "Generic Python library and CLI tool for Alcatel LTE modems"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Alcatel Modem API Contributors"}
]
keywords = ["alcatel", "modem", "lte", "4g", "5g", "router", "api", "sms"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking",
  "Topic :: Communications :: Telephony",
]

dependencies = [
  "httpx>=0.25.0",
  "pydantic>=2.0.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "cryptography>=3.4.8",
  "keyring>=24.0.0",
  "platformdirs>=4.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "respx>=0.20.0",
  "mypy>=1.5.0",
  "pre-commit>=3.0.0",
  "bandit[toml]>=1.7.0",
  "tomli>=2.0.0",
  "hypothesis>=6.0.0",
]

[project.scripts]
alcatel = "alcatel_modem_api.cli:cli"

[tool.hatch.version]
path = "alcatel_modem_api/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "alcatel_modem_api",
  "alcatel_modem_api/py.typed",
]

[tool.ruff]
line-length = 160
indent-width = 2

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["alcatel_modem_api"]

[project.urls]
Homepage = "https://github.com/volkanncicek/alcatel-modem-api"
Repository = "https://github.com/volkanncicek/alcatel-modem-api"
Issues = "https://github.com/volkanncicek/alcatel-modem-api/issues"
Changelog = "https://github.com/volkanncicek/alcatel-modem-api/blob/main/CHANGELOG.md"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict = true

[[tool.mypy.overrides]]
module = [
  "tests.*",
]
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
skips = ["B101", "B110"]  # Skip assert_used and try_except_pass (intentional in some cases)
